      the usual assertions for expected state - used
      by Query subclasses to engineer custom state.
      [ticket:1424].  See
      http://www.sqlalchemy.org/trac/wiki/UsageRecipes/PreFilteredQuery
      for an example.

    - Fixed recursion issue which occured if a mapped object's
      `__len__()` or `__nonzero__()` method resulted in state
      changes.  [ticket:1501]
      
    - Fixed a somewhat hypothetical issue which would result
      in the wrong primary key being calculated for a mapper
      using the old polymorphic_union function - but this
      is old stuff.  [ticket:1486]
      
- sql
    - Fixed column.copy() to copy defaults and onupdates.
      [ticket:1373]

    - Fixed a bug in extract() introduced in 0.5.4 whereby
      the string "field" argument was getting treated as a 
      ClauseElement, causing various errors within more 
      complex SQL transformations.
      
    - Unary expressions such as DISTINCT propagate their 
      type handling to result sets, allowing conversions like
      unicode and such to take place.  [ticket:1420]
    
    - Fixed bug in Table and Column whereby passing empty
      dict for "info" argument would raise an exception.
      [ticket:1482]

- oracle
    - Backported 0.6 fix for Oracle alias names not getting
      truncated.  [ticket:1309]
      
- ext
   - The collection proxies produced by associationproxy are now
     pickleable.  A user-defined proxy_factory however
     is still not pickleable unless it defines __getstate__
     and __setstate__. [ticket:1446]

   - Declarative will raise an informative exception if 
     __table_args__ is passed as a tuple with no dict argument.
     Improved documentation.  [ticket:1468]

- test
   - Added examples into the test suite so they get exercised
     regularly and cleaned up a couple deprecation warnings.

     
0.5.5
=======
- general
    - unit tests have been migrated from unittest to nose.  See